--- a/TobotApp/src/main/res/layout/activity_main.xml
+++ b/TobotApp/src/main/res/layout/activity_main.xml
@@ -41,15 +41,6 @@
         android:textColor="@color/tv_rssi_tips"
         android:textSize="@dimen/tv_mode_tips" />
 
-    <TextView
-        android:id="@+id/tv_plan_path"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/view_margin_top"
-        android:layout_marginTop="@dimen/view_margin_top"
-        android:textColor="@color/tv_pose_show"
-        android:textSize="@dimen/tv_mode_tips" />
-
     <ImageView
         android:id="@+id/iv_set"
         android:layout_width="wrap_content"
@@ -115,6 +106,15 @@
 
     <com.tobot.map.module.main.edit.EditLineView
         android:id="@+id/view_edit_line"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/view_margin_top"
+        android:visibility="gone" />
+
+    <com.tobot.map.module.main.edit.RubberEditView
+        android:id="@+id/view_rubber_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
