--- a/TobotApp/src/main/res/layout/fragment_config.xml
+++ b/TobotApp/src/main/res/layout/fragment_config.xml
@@ -195,6 +195,38 @@
                         android:text="@string/meet_obstacle_suspend" />
                 </RadioGroup>
 
+                <LinearLayout
+                    android:id="@+id/ll_try_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_try_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/tv_try_time_tips"
+                        android:textColor="@color/tv_tips"
+                        android:textSize="@dimen/tv_tips" />
+
+                    <com.tobot.bar.seekbar.StripSeekBar
+                        android:id="@+id/sb_try_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/sb_speed_height"
+                        android:layout_marginLeft="@dimen/sb_speed_padding_left"
+                        android:paddingLeft="@dimen/sb_speed_padding_left"
+                        android:paddingRight="@dimen/sb_speed_padding_left"
+                        app:bar_bgColor="@color/sb_speed_bg"
+                        app:bar_centerColor="@color/sb_speed_center"
+                        app:bar_circleColor="@color/sb_speed_circle"
+                        app:bar_endColor="@color/sb_speed_end"
+                        app:bar_height="@dimen/sb_speed_bar_height"
+                        app:bar_startColor="@color/sb_speed_start"
+                        app:bar_textShow="false" />
+                </LinearLayout>
+
                 <View
                     style="@style/view_line"
                     android:layout_marginTop="@dimen/view_margin_top" />
