--- a/TobotApp/src/main/res/layout/fragment_config.xml
+++ b/TobotApp/src/main/res/layout/fragment_config.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ScrollView
+    <com.tobot.map.module.common.HorizontalConflictScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never">
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/tv_set_speed"
                     android:textColor="@color/tv_content"
-                    android:textSize="@dimen/tv_tips" />
+                    android:textSize="@dimen/tv_content" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -69,7 +69,7 @@
                     android:layout_marginTop="@dimen/view_margin_top"
                     android:text="@string/tv_rotate_speed"
                     android:textColor="@color/tv_content"
-                    android:textSize="@dimen/tv_tips" />
+                    android:textSize="@dimen/tv_content" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -109,7 +109,7 @@
                     android:layout_marginTop="@dimen/view_margin_top"
                     android:text="@string/navigate_mode"
                     android:textColor="@color/tv_content"
-                    android:textSize="@dimen/tv_tips" />
+                    android:textSize="@dimen/tv_content" />
 
                 <RadioGroup
                     android:layout_width="wrap_content"
@@ -145,7 +145,7 @@
                     android:layout_marginTop="@dimen/view_margin_top"
                     android:text="@string/motion_to_point_mode"
                     android:textColor="@color/tv_content"
-                    android:textSize="@dimen/tv_tips" />
+                    android:textSize="@dimen/tv_content" />
 
                 <RadioGroup
                     android:layout_width="wrap_content"
@@ -175,7 +175,7 @@
                     android:layout_marginTop="@dimen/view_margin_top"
                     android:text="@string/avoid_obstacle_mode"
                     android:textColor="@color/tv_content"
-                    android:textSize="@dimen/tv_tips" />
+                    android:textSize="@dimen/tv_content" />
 
                 <RadioGroup
                     android:layout_width="wrap_content"
@@ -290,5 +290,5 @@
                     android:visibility="gone" />
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </com.tobot.map.module.common.HorizontalConflictScrollView>
 </LinearLayout>
