--- a/TobotApp/src/main/res/layout/fragment_test.xml
+++ b/TobotApp/src/main/res/layout/fragment_test.xml
@@ -2,59 +2,112 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:focusable="true"
     android:focusableInTouchMode="true">
 
-    <LinearLayout
+    <com.tobot.map.module.common.HorizontalConflictScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/view_set_margin_left_right"
-        android:layout_marginTop="@dimen/view_margin_top"
-        android:layout_marginRight="@dimen/view_set_margin_left_right"
-        android:orientation="vertical">
+        android:overScrollMode="never">
 
-        <EditText
-            android:id="@+id/et_speed"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/et_height"
-            android:layout_marginTop="@dimen/et_margin_top"
-            android:background="@drawable/shape_edit_bg"
-            android:gravity="center"
-            android:hint="@string/et_rotate_speed_hint_tips"
-            android:inputType="number"
-            android:textColor="@color/et_tv"
-            android:textSize="@dimen/et_tv" />
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/view_margin_top"
-            android:text="@string/tv_rotate_direction"
-            android:textColor="@color/tv_content"
-            android:textSize="@dimen/tv_tips" />
+            android:orientation="vertical"
+            android:paddingTop="@dimen/view_margin_top"
+            android:paddingBottom="@dimen/view_margin_top">
 
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/view_margin_top"
-            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/view_set_margin_left_right"
+                android:layout_marginRight="@dimen/view_set_margin_left_right"
+                android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/rb_to_left"
-                style="@style/rb_speed"
-                android:checked="true"
-                android:text="@string/to_left" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tv_low_battery"
+                    android:textColor="@color/tv_content"
+                    android:textSize="@dimen/tv_content" />
 
-            <RadioButton
-                android:id="@+id/rb_to_right"
-                style="@style/rb_speed"
-                android:layout_marginLeft="@dimen/rb_wall_margin"
-                android:text="@string/to_right" />
-        </RadioGroup>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_send"
-            style="@style/btn_connect"
-            android:text="@string/btn_send" />
-    </LinearLayout>
+                    <TextView
+                        android:id="@+id/tv_low_battery_tips"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/tv_tips"
+                        android:textSize="@dimen/tv_tips" />
+
+                    <com.tobot.bar.seekbar.StripSeekBar
+                        android:id="@+id/sb_battery"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/sb_speed_height"
+                        android:layout_marginLeft="@dimen/sb_speed_padding_left"
+                        android:paddingLeft="@dimen/sb_speed_padding_left"
+                        android:paddingRight="@dimen/sb_speed_padding_left"
+                        app:bar_bgColor="@color/sb_speed_bg"
+                        app:bar_centerColor="@color/sb_speed_center"
+                        app:bar_circleColor="@color/sb_speed_circle"
+                        app:bar_endColor="@color/sb_speed_end"
+                        app:bar_height="@dimen/sb_speed_bar_height"
+                        app:bar_startColor="@color/sb_speed_start"
+                        app:bar_textShow="false" />
+                </LinearLayout>
+
+                <View style="@style/view_line" />
+
+                <EditText
+                    android:id="@+id/et_speed"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/et_height"
+                    android:layout_marginTop="@dimen/view_margin_top"
+                    android:background="@drawable/shape_edit_bg"
+                    android:gravity="center"
+                    android:hint="@string/et_rotate_speed_hint_tips"
+                    android:inputType="number"
+                    android:textColor="@color/et_tv"
+                    android:textSize="@dimen/et_tv" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/view_margin_top"
+                    android:text="@string/tv_rotate_direction"
+                    android:textColor="@color/tv_content"
+                    android:textSize="@dimen/tv_content" />
+
+                <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/view_margin_top"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rb_to_left"
+                        style="@style/rb_speed"
+                        android:checked="true"
+                        android:text="@string/to_left" />
+
+                    <RadioButton
+                        android:id="@+id/rb_to_right"
+                        style="@style/rb_speed"
+                        android:layout_marginLeft="@dimen/rb_wall_margin"
+                        android:text="@string/to_right" />
+                </RadioGroup>
+
+                <Button
+                    android:id="@+id/btn_send"
+                    style="@style/btn_connect"
+                    android:text="@string/btn_send" />
+            </LinearLayout>
+        </LinearLayout>
+    </com.tobot.map.module.common.HorizontalConflictScrollView>
 </RelativeLayout>
