传感器返回id，修改充电桩表示，开机标识随屏幕旋转方向固定不变

--- a/TobotApp/src/main/res/layout/recycler_item_set.xml
+++ b/TobotApp/src/main/res/layout/recycler_item_set.xml
@@ -10,5 +10,5 @@
         android:background="@drawable/selector_item_bg"
         android:gravity="center"
         android:textColor="@drawable/selector_tv_item"
-        android:textSize="@dimen/tab_set_tv_normal" />
+        android:textSize="@dimen/tv_content" />
 </RelativeLayout>
