--- a/TobotApp/src/main/res/layout/dialog_add_point_view.xml
+++ b/TobotApp/src/main/res/layout/dialog_add_point_view.xml
@@ -26,7 +26,7 @@
     </RelativeLayout>
 
     <View
-        style="@style/view_line"
+        style="@style/popup_view_line"
         android:layout_marginLeft="@dimen/view_margin_top"
         android:layout_marginRight="@dimen/view_margin_top" />
 
