--- a/TobotApp/src/main/res/layout/recycler_item_task.xml
+++ b/TobotApp/src/main/res/layout/recycler_item_task.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_root"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/selector_item_point_bg"
+    android:background="@drawable/selector_item_task_bg"
     android:gravity="center"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/view_margin_top"
-    android:paddingBottom="@dimen/view_margin_top">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/item_tv_margin_left_right"
-        android:layout_marginRight="@dimen/item_tv_margin_left_right"
         android:duplicateParentState="true"
+        android:paddingLeft="@dimen/btn_over_content_padding_left"
+        android:paddingTop="@dimen/btn_over_content_padding_top"
+        android:paddingRight="@dimen/btn_over_content_padding_left"
+        android:paddingBottom="@dimen/btn_over_content_padding_top"
         android:textColor="@drawable/selector_tv_item"
         android:textSize="@dimen/tv_content" />
 </LinearLayout>
