--- a/TobotApp/src/main/res/values/dimens.xml
+++ b/TobotApp/src/main/res/values/dimens.xml
@@ -14,12 +14,13 @@
     <dimen name="layout_item_height">45dp</dimen>
     <dimen name="btn_height">45dp</dimen>
     <dimen name="btn_item_height">40dp</dimen>
-    <dimen name="btn_area_padding_left">10dp</dimen>
     <dimen name="btn_over_content_padding_left">20dp</dimen>
+    <dimen name="btn_over_content_padding_top">10dp</dimen>
     <dimen name="dialog_btn_height">45dp</dimen>
     <dimen name="et_height">45dp</dimen>
     <dimen name="et_tv">17sp</dimen>
     <dimen name="et_margin_top">20dp</dimen>
+    <dimen name="tips_margin_top">10dp</dimen>
     <dimen name="shape_oval_corners_radius">30dp</dimen>
     <dimen name="shape_stroke_width">1dp</dimen>
     <dimen name="shape_corners">5dp</dimen>
@@ -49,8 +50,6 @@
     <dimen name="dialog_content_margin_top">20dp</dimen>
     <dimen name="dialog_tips_margin_top">20dp</dimen>
     <dimen name="dialog_btn_margin_top">20dp</dimen>
-    <dimen name="item_post_height">50dp</dimen>
-    <dimen name="ll_area_pose_area_width">240dp</dimen>
     <dimen name="iv_drawable_padding">8dp</dimen>
     <dimen name="popup_margin_bottom">10dp</dimen>
     <dimen name="popup_margin_left_right">10dp</dimen>
@@ -64,7 +63,7 @@
     <dimen name="window_add_line_view_width">80dp</dimen>
     <dimen name="item_split_size">5dp</dimen>
     <dimen name="item_tv_margin_left_right">4dp</dimen>
-    <dimen name="wheelView_width">120dp</dimen>
+    <dimen name="wheelView_width">150dp</dimen>
     <dimen name="wheelView_textSize">20sp</dimen>
     <dimen name="wheelView_margin_top">4dp</dimen>
     <dimen name="tv_toast_size">12sp</dimen>
