添加到点不旋转功能、添加重新打开app加载上一次位置点功能

--- a/TobotApp/src/main/res/layout/activity_location_edit.xml
+++ b/TobotApp/src/main/res/layout/activity_location_edit.xml
@@ -74,6 +74,12 @@
                         style="@style/rb_speed"
                         android:layout_marginLeft="@dimen/rb_wall_margin"
                         android:text="@string/tv_relocation" />
+
+                    <RadioButton
+                        android:id="@+id/rb_arrive_not_rotate"
+                        style="@style/rb_speed"
+                        android:layout_marginLeft="@dimen/rb_wall_margin"
+                        android:text="@string/tv_arrive_not_rotate" />
                 </RadioGroup>
             </RelativeLayout>
 
