--- a/TobotApp/src/main/res/layout/dialog_confirm.xml
+++ b/TobotApp/src/main/res/layout/dialog_confirm.xml
@@ -20,6 +20,7 @@
             android:layout_marginLeft="@dimen/dialog_layout_margin_left"
             android:layout_marginTop="@dimen/dialog_content_margin_top"
             android:layout_marginRight="@dimen/dialog_layout_margin_left"
+            android:lineSpacingExtra="@dimen/tv_line_space"
             android:text="@string/tv_map_switch_tips"
             android:textColor="@color/tv_white"
             android:textSize="@dimen/tv_content" />
