--- a/TobotApp/src/main/res/layout/fragment_config.xml
+++ b/TobotApp/src/main/res/layout/fragment_config.xml
@@ -228,6 +228,31 @@
                     android:layout_marginTop="@dimen/view_margin_top" />
 
                 <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/layout_item_height"
+                    android:background="@drawable/selector_item_bg"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="@string/tv_speed_multiplier"
+                        android:textColor="@drawable/selector_tv_item"
+                        android:textSize="@dimen/tv_content" />
+
+                    <TextView
+                        android:id="@+id/tv_speed_multiplier"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/selector_switch" />
+                </RelativeLayout>
+
+                <View style="@style/view_line" />
+
+                <RelativeLayout
                     android:id="@+id/rl_navigate_parameter"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/layout_item_height"
