添加到点不旋转功能、添加重新打开app加载上一次位置点功能

--- a/TobotApp/src/main/res/layout/dialog_task_detail.xml
+++ b/TobotApp/src/main/res/layout/dialog_task_detail.xml
@@ -32,7 +32,7 @@
             android:layout_marginLeft="@dimen/dialog_layout_margin_left"
             android:layout_marginTop="@dimen/dialog_layout_margin_top"
             android:layout_marginRight="@dimen/dialog_layout_margin_left"
-            android:lineSpacingExtra="@dimen/item_split_size"
+            android:lineSpacingExtra="@dimen/tv_line_space"
             android:textColor="@color/tv_white"
             android:textSize="@dimen/tv_content" />
     </LinearLayout>
