--- a/TobotApp/src/main/res/layout/dialog_task_execute_confirm.xml
+++ b/TobotApp/src/main/res/layout/dialog_task_execute_confirm.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/tv_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:lineSpacingExtra="@dimen/item_split_size"
+                    android:lineSpacingExtra="@dimen/tv_line_space"
                     android:text="@string/tv_task_point_tips"
                     android:textColor="@color/tv_content"
                     android:textSize="@dimen/tv_content" />
